--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     position: relative;
     height:100%;  
 }
+.container{
+    max-width: 1170px;
+    margin: 0 auto;
+    height:200px;
+}
 .lightpink {
     border: 1px solid black;
     background-color: #FFC0CB;   
