--- a/bonus/style.css
+++ b/bonus/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #6387FA;
+    background: linear-gradient(45deg, #6387FA,#5E94F8);
     height: 700px;
 }
 .container{ 
@@ -13,8 +13,15 @@ body{
     color:red;
     font-family: 'Nerko One', cursive;
 }
+.text-white{
+    margin-top:40px;
+    width:60%;
+    font-family: 'Nerko One', cursive;
+    color:white;
+    text-transform: uppercase;
+    font-size: 24px;
+}
 .col-6{
-
     margin-top: 40px;
 }
 .col-12 img{
@@ -25,8 +32,8 @@ body{
     margin-bottom:-4px;
     
 }
-.empty .col-6{
-    height:80px;
+.third{
+    margin-top: 50px;
 }
 .col-8 img{
     height:100px;
